Improve directory layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED YES)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_subdirectory(extern)
+add_subdirectory(src)
 
+# TODO: move to examples/
 add_executable(cgui_example1 examples/example1.cpp)
-target_link_libraries(cgui_example1 PRIVATE SDL2 skia)
+target_link_libraries(cgui_example1 PRIVATE cgui_lib)
