--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "extern/SDL"]
 	path = extern/SDL
 	url = https://github.com/libsdl-org/SDL.git
-[submodule "extern/skia"]
-	path = extern/skia
+[submodule "extern/skia/src"]
+	path = extern/skia/src
 	url = https://skia.googlesource.com/skia.git
