Move include(ExternalProject)

--- a/extern/skia/CMakeLists.txt
+++ b/extern/skia/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(ExternalProject)
+
 set(SKIA_LIB_NAME skia)
 set(SKIA_LIB ${CMAKE_STATIC_LIBRARY_PREFIX}${SKIA_LIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX})
 
