--- a/extern/skia/CMakeLists.txt
+++ b/extern/skia/CMakeLists.txt
@@ -17,7 +17,7 @@ ExternalProject_Add(skia_build
         )
 ExternalProject_Get_Property(skia_build SOURCE_DIR BINARY_DIR)
 
-set(DEP_NAMES
+set(SYS_DEP_NAMES
         "pthread"
         "fontconfig"
         "dl"
@@ -34,9 +34,17 @@ set(DEP_NAMES
         "webpmux"
         )
 
-foreach (DEP_NAME IN LISTS DEP_NAMES)
+set(MOD_DEP_NAMES
+        "skparagraph"
+        )
+
+foreach (DEP_NAME IN LISTS SYS_DEP_NAMES)
     find_library(LIB${DEP_NAME} ${DEP_NAME} REQUIRED)
     set(DEPS ${DEPS} ${LIB${DEP_NAME}})
+endforeach ()
+
+foreach (DEP_NAME IN LISTS MOD_DEP_NAMES)
+    set(DEPS ${DEPS} ${BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}${DEP_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX})
 endforeach ()
 
 set(HEADERS
@@ -51,6 +59,8 @@ set(HEADERS
         ${SOURCE_DIR}/include/ports
         ${SOURCE_DIR}/include/svg
         ${SOURCE_DIR}/include/utils
+        ${SOURCE_DIR}/modules/skparagraph/include
+        ${SOURCE_DIR}/modules/skparagraph/utils # TODO: remove
         )
 
 set(DEFINITIONS
